tests/requests/snapshots/records/can_post_one@health.snap
---
source: tests/requests/health.rs
assertion_line: 109
expression: "(response.status_code(), response.json::<HealthRecord>())"
---
(
    201,
    HealthRecord {
        id: ID
        animal_pid: PID,
        organisation_pid: PID,
        condition: "vaccination",
        status: "active",
        severity: "low",
        record_date: DATE,
        description: "Vaccinated Buttercup against foot and mouth disease.",
        treatment: Some(
            "oral solution",
        ),
        medicine: Some(
            "Anti FnM",
        ),
        dosage: Some(
            "250",
        ),
        cost: Some(
            25.00,
        ),
        performed_by: Some(
            "James Dokter",
        ),
        prognosis: None,
        notes: None,
        created_by: PID,
        created_at: DATE,
        updated_at: DATE,
    },
)
