tests/requests/snapshots/records/can_post_one@weight.snap
---
source: tests/requests/weight.rs
assertion_line: 96
expression: "(request.status_code(), request.json::<WeightRecord>())"
---
(
    201,
    WeightRecord {
        id: ID
        organisation_pid: PID,
        animal_pid: PID,
        mass: 485.00,
        record_date: DATE,
        notes: Some(
            "Regular checkup",
        ),
        unit: "kg",
        previous_mass: 0,
        status: "normal",
        created_by: PID,
        created_at: DATE,
        updated_at: DATE,
    },
)
